# infra-twin

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  infra-digital-twin-plan.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/infra_twin/api/: __init__.py  app.py  auth.py  graphql_schema.py  oidc.py  scim_models.py
apps/api/src/infra_twin/api/nlquery/: __init__.py  engine.py  eval.py  eval_dataset.py  planner.py  templates.py
apps/cli/: pyproject.toml
apps/cli/src/infra_twin/cli/: main.py
apps/web/: .env.example  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
apps/web/src/components/: AskBox.tsx  ChangeFeed.tsx  GraphView.tsx
infra/onboarding/aws/: infra-twin-readonly-role.yaml
infra/terraform/: .gitignore  README.md
infra/terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/platform/: main.tf  outputs.tf  variables.tf
migrations/: 0001_init.sql  0002_graph_delete_grant.sql  0003_internet_vertex_label.sql  0004_dns_name_vertex_label.sql  0005_connector_registry.sql  0006_k8s_vertex_labels.sql  0007_api_keys.sql  0008_api_key_role.sql  0009_audit_log.sql  0010_usage_quota.sql  0011_findings.sql  0012_notifications.sql  0013_notification_kind_and_retries.sql  0014_tenant_idp_config.sql  0015_scim_users.sql  0016_azure_vertex_labels.sql  0017_gcp_vertex_labels.sql  0018_db_vertex_labels.sql  0019_edge_key_identity.sql  0020_saas_vertex_labels.sql  0021_entity_alias_keys.sql  0022_ci_unmerges.sql  0023_ci_merge_candidates.sql  0024_freshness_slo.sql  0025_history_retention.sql
services/collectors/: pyproject.toml
services/collectors/src/infra_twin/collectors/: __init__.py
services/collectors/src/infra_twin/collectors/aws/: __init__.py  connector.py  events.py  flowlogs.py
services/collectors/src/infra_twin/collectors/azure/: __init__.py  connector.py
services/collectors/src/infra_twin/collectors/db/: __init__.py  connector.py
services/collectors/src/infra_twin/collectors/gcp/: __init__.py  connector.py
services/collectors/src/infra_twin/collectors/k8s/: __init__.py  connector.py  events.py
services/collectors/src/infra_twin/collectors/saas/: __init__.py  connector.py
services/query/: pyproject.toml
services/query/src/infra_twin/query/: __init__.py  blast_radius.py  change_feed.py  rca.py  reachability.py  topology.py  whatif.py
services/reconciliation/: pyproject.toml
services/reconciliation/src/infra_twin/reconciliation/: __init__.py  aging.py  anomalies.py  candidates.py  events.py  findings.py  notifications.py  projection.py  reconcile.py  retention.py  run.py  unmerge.py
tests/: conftest.py  test_anomalies.py  test_api.py  test_api_dockerfile.py  test_api_key_auth.py  test_apply_delta.py  test_audit_log.py  test_auth.py  test_aws_connector.py  test_aws_events.py  test_azure_connector.py  test_bitemporal.py  test_blast_radius.py  test_change_feed.py  test_ci_workflow.py  test_confidence_curve.py  test_connector_health.py  test_connector_registry.py  test_db_connector.py  test_discovery_integration.py  test_edge_identity.py  test_entity_resolution.py  test_event_intake.py  test_findings.py  test_flowlog_confidence_accumulation.py  test_freshness_slo.py  test_gcp_connector.py  test_graph.py  test_graphql_read_surface.py  test_history_retention.py  test_iam_s3_edges.py  test_inferred_edge_aging.py  test_k8s_connector.py  test_k8s_discovery_integration.py  test_k8s_events.py  test_merge_review.py  test_migrations.py  test_nl_eval.py  test_nlquery.py  test_notifications.py  (+19 more)
tests/fixtures/cloudtrail/: authorize_sg_ingress_cidr_only.json  authorize_sg_ingress_sg_source.json  create_security_group.json  revoke_sg_ingress_sg_source.json  run_instances.json  run_instances_multi.json  terminate_instances.json  unsupported_event.json
