[project]
name = "infra-twin-api"
version = "0.1.0"
description = "FastAPI read/query surface for infra-twin."
requires-python = ">=3.12"
dependencies = [
    "infra-twin-core-model",
    "infra-twin-db",
    "infra-twin-query",
    "infra-twin-reconciliation",
    "infra-twin-onboarding",
    "anthropic>=0.40",
    "cryptography>=42",
    "fastapi>=0.110",
    "PyJWT>=2.8",
    "strawberry-graphql>=0.235",
    "uvicorn>=0.29",
]

[tool.uv.sources]
infra-twin-core-model = { workspace = true }
infra-twin-db = { workspace = true }
infra-twin-query = { workspace = true }
infra-twin-reconciliation = { workspace = true }
infra-twin-onboarding = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_twin"]
