[project]
name = "infra-twin-cli"
version = "0.1.0"
description = "Command-line entrypoints for infra-twin."
requires-python = ">=3.12"
dependencies = [
    "infra-twin-core-model",
    "infra-twin-db",
    "infra-twin-collectors",
    "infra-twin-reconciliation",
    "boto3>=1.34",
]

[tool.uv.sources]
infra-twin-core-model = { workspace = true }
infra-twin-db = { workspace = true }
infra-twin-collectors = { workspace = true }
infra-twin-reconciliation = { workspace = true }

[project.scripts]
infra-twin = "infra_twin.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_twin"]
