[project]
name = "infra-twin-collectors"
version = "0.1.0"
description = "Read-only cloud discovery connectors."
requires-python = ">=3.12"
dependencies = [
    "infra-twin-core-model",
    "infra-twin-connector-sdk",
    "boto3>=1.34",
    "kubernetes>=29",
]

[tool.uv.sources]
infra-twin-core-model = { workspace = true }
infra-twin-connector-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_twin"]
