[project]
name = "infra-twin-reconciliation"
version = "0.1.0"
description = "Entity resolution, bitemporal diffing, and graph projection."
requires-python = ">=3.12"
dependencies = [
    "infra-twin-core-model",
    "infra-twin-connector-sdk",
    "infra-twin-db",
]

[tool.uv.sources]
infra-twin-core-model = { workspace = true }
infra-twin-connector-sdk = { workspace = true }
infra-twin-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_twin"]
